создана разметка шапки и блока inner, присвоены им стили

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 body {
   margin: 0;
   padding: 0;
@@ -109,3 +110,124 @@ input, textarea, input:before, textarea:before, input:after, textarea:after {
 button {
   border: none;
   cursor: pointer; }
+
+.inner::before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-left: -4px; }
+
+.inner > * {
+  display: inline-block;
+  vertical-align: middle; }
+
+.conteiner {
+  width: 1040px;
+  margin: 0 auto; }
+
+.icon {
+  display: inline-block; }
+
+.header {
+  height: 80px;
+  width: 100%;
+  background: #fff; }
+  .header .logo {
+    float: left;
+    margin-top: 14px; }
+  .header .header-nav {
+    float: right;
+    margin-top: 26px; }
+    .header .header-nav li {
+      display: inline-block;
+      margin-right: 40px; }
+      .header .header-nav li a {
+        font-size: 16px; }
+        .header .header-nav li a:hover {
+          color: #ef6223; }
+
+.admin-ic {
+  background-image: url(../img/sprite.png);
+  background-position: -70px -97px;
+  width: 29px;
+  height: 30px; }
+
+.apartmen-ic {
+  background-image: url(../img/sprite.png);
+  background-position: 0px -62px;
+  width: 35px;
+  height: 35px; }
+
+.commers-ic {
+  background-image: url(../img/sprite.png);
+  background-position: -97px 0px;
+  width: 35px;
+  height: 34px; }
+
+.crime-ic {
+  background-image: url(../img/sprite.png);
+  background-position: -62px 0px;
+  width: 35px;
+  height: 35px; }
+
+.hands-ic {
+  background-image: url(../img/sprite.png);
+  background-position: -97px -34px;
+  width: 35px;
+  height: 34px; }
+
+.home-ic {
+  background-image: url(../img/sprite.png);
+  background-position: -70px -62px;
+  width: 27px;
+  height: 35px; }
+
+.keys-ic {
+  background-image: url(../img/sprite.png);
+  background-position: -35px -97px;
+  width: 35px;
+  height: 33px; }
+
+.people-ic {
+  background-image: url(../img/sprite.png);
+  background-position: -35px -62px;
+  width: 35px;
+  height: 35px; }
+
+.planet-ic {
+  background-image: url(../img/sprite.png);
+  background-position: 0px 0px;
+  width: 62px;
+  height: 62px; }
+
+.resident-ic {
+  background-image: url(../img/sprite.png);
+  background-position: 0px -97px;
+  width: 35px;
+  height: 34px; }
+
+.serch-ic {
+  background-image: url(../img/sprite.png);
+  background-position: -97px -68px;
+  width: 19px;
+  height: 19px; }
+
+.inner {
+  height: -webkit-calc( 100vh - 80px);
+  height: calc( 100vh - 80px);
+  background: url("../img/inner-bg.jpg") no-repeat top center;
+  background-size: cover;
+  text-align: center; }
+  .inner .inner-block {
+    color: #fff; }
+    .inner .inner-block h1 {
+      font-weight: 700;
+      font-size: 72px; }
+    .inner .inner-block > span {
+      font-size: 28px;
+      font-weight: 300; }
+    .inner .inner-block .inner-form {
+      margin-top: 40px;
+      padding: 25px 37px;
+      background: rgba(0, 0, 0, 0.45); }
