заданы стили для inner-form

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -129,6 +129,29 @@ button {
 .icon {
   display: inline-block; }
 
+.form-control {
+  display: inline-block;
+  height: 57px;
+  padding: 0 15px;
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
+  color: #7e878d;
+  font-size: 16px; }
+
+.form-btn {
+  display: inline-block;
+  height: 57px;
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
+  color: #fff;
+  font-weight: 600;
+  background: #ef6223;
+  padding: 0 27px;
+  font-size: 16px;
+  text-transform: uppercase; }
+  .form-btn:hover {
+    background: #d0551e; }
+
 .header {
   height: 80px;
   width: 100%;
@@ -223,7 +246,8 @@ button {
     color: #fff; }
     .inner .inner-block h1 {
       font-weight: 700;
-      font-size: 72px; }
+      font-size: 72px;
+      margin-bottom: 26px; }
     .inner .inner-block > span {
       font-size: 28px;
       font-weight: 300; }
@@ -231,3 +255,7 @@ button {
       margin-top: 40px;
       padding: 25px 37px;
       background: rgba(0, 0, 0, 0.45); }
+      .inner .inner-block .inner-form .first-form .form-control {
+        width: 325px; }
+      .inner .inner-block .inner-form input + input, .inner .inner-block .inner-form select + input {
+        margin-left: 4px; }
