--- a/app/css/style.css
+++ b/app/css/style.css
@@ -173,6 +173,25 @@ button {
   .form-btn:hover {
     background: #d0551e; }
 
+input[type="checkbox"] {
+  display: none; }
+  input[type="checkbox"] + label {
+    display: inline-block;
+    cursor: pointer;
+    padding-right: 47px; }
+    input[type="checkbox"] + label:before {
+      content: '';
+      display: inline-block;
+      height: 18px;
+      width: 18px;
+      background: #fff;
+      -webkit-border-radius: 1px;
+              border-radius: 1px;
+      margin-right: 14px;
+      vertical-align: middle; }
+  input[type="checkbox"]:checked + label::before {
+    background: #fff url("../img/checbox-checked-bg.png") no-repeat center center; }
+
 .simple-text-block {
   padding: 27px 0;
   font-size: 18px;
@@ -321,13 +340,34 @@ button {
       font-size: 28px;
       font-weight: 300; }
     .inner .inner-block .inner-form {
+      width: 860px;
       margin-top: 40px;
       padding: 25px 37px;
-      background: rgba(0, 0, 0, 0.45); }
+      background: rgba(0, 0, 0, 0.45);
+      text-align: center; }
       .inner .inner-block .inner-form .first-form .form-control {
         width: 325px; }
       .inner .inner-block .inner-form input + input, .inner .inner-block .inner-form select + input {
         margin-left: 4px; }
+      .inner .inner-block .inner-form .more-option-btn {
+        cursor: pointer;
+        display: inline-block;
+        margin: 10px 0 15px 0; }
+      .inner .inner-block .inner-form .more-option-form {
+        display: none; }
+    .inner .inner-block .input-group {
+      margin-bottom: 13px;
+      display: inline-block; }
+      .inner .inner-block .input-group label {
+        font-size: 16px;
+        font-weight: 600; }
+    .inner .inner-block .form-text label {
+      display: block; }
+    .inner .inner-block .input-group-select {
+      float: left;
+      margin-right: 6px; }
+    .inner .inner-block .input-checkbox {
+      clear: both; }
 
 .service-wrap {
   padding: 55px 0 70px 0; }
