--- a/app/css/slick.css
+++ b/app/css/slick.css
@@ -48,6 +48,7 @@
   float: left;
   height: 100%;
   min-height: 1px;
+  margin: 0 20px;
   display: none; }
   [dir="rtl"] .slick-slide {
     float: right; }
