--- a/app/css/slick.css
+++ b/app/css/slick.css
@@ -18,7 +18,8 @@
   overflow: hidden;
   display: block;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  text-align: center; }
   .slick-list:focus {
     outline: none; }
   .slick-list.dragging {
@@ -48,7 +49,6 @@
   float: left;
   height: 100%;
   min-height: 1px;
-  margin: 0 20px;
   display: none; }
   [dir="rtl"] .slick-slide {
     float: right; }
